added notes title input

--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
 
         <div class="card container">
             <div class="card-body">
-                <h5 class="card-title">Write a note</h5>
                 <div class="mb-3">
-                    <textarea class="form-control" id="addTxt" rows="3"></textarea>
+                    <h5 class="card-title">Write a note</h5>
+                    <input type="text" class="form-control title" id="title" placeholder="Enter title">
+                  </div>
+                <div class="mb-3">
+                    <textarea class="form-control" id="addTxt" rows="5" placeholder="Write note here"></textarea>
                 </div>
                 <buttom class="btn btn-primary" id="addBtn">Add Note</buttom>
             </div>
